# movie-pipeline-segments-validator

./: .gitignore  README.md  pyproject.toml  segment_validator.py  server.py  settings.py  util.py
MoviePipelineSegmentsValidatorUi/: README.md  gradle.properties  settings.gradle.kts
MoviePipelineSegmentsValidatorUi/composeApp/: build.gradle.kts
MoviePipelineSegmentsValidatorUi/composeApp/src/androidMain/: AndroidManifest.xml
MoviePipelineSegmentsValidatorUi/gradle/: libs.versions.toml
movie_pipeline/lib/title_extractor/: title_cleaner.py  title_extractor.py  title_serie_extractor.py
movie_pipeline/services/: edl_scaffolder.py
movie_pipeline_segments_validator/: app.py  main.py  settings.py
movie_pipeline_segments_validator/adapters/http/: dependencies.py  main.py
movie_pipeline_segments_validator/adapters/http/openapi/: v0.2.2.json  v0.3.0.json
movie_pipeline_segments_validator/adapters/pysimplegui/: detector_selector_controller.py  main.py  media_control_controller.py  media_selector_list_controller.py  segments_list_controller.py  segments_timeline_controller.py  timeline_controller.py  video_controller.py
movie_pipeline_segments_validator/adapters/repository/: resources.py  session_repository.py
movie_pipeline_segments_validator/controllers/: detector_selector_controller.py  edit_decision_file_dumper.py  media_control_controller.py  media_selector_list_controller.py  segments_list_controller.py  segments_timeline_controller.py  timeline_controller.py  video_controller.py
movie_pipeline_segments_validator/domain/: __init__.py  context.py  detected_segments.py  events.py  keys.py  media_path.py  movie_segments.py  segment_container.py  widget.py
movie_pipeline_segments_validator/lib/: simple_video_only_player.py  util.py  video_player.py
movie_pipeline_segments_validator/lib/title_extractor/: strategy.py  title_cleaner.py  title_extractor.py  title_serie_extractor.py
movie_pipeline_segments_validator/lib/video_player/: simple_video_only_player.py  video_player.py
movie_pipeline_segments_validator/services/: detector_service.py  edit_decision_file_dumper.py  edl_scaffolder.py  import_segments_from_file.py  media_selector_service.py  segment_service.py  timeline_service.py
movie_pipeline_segments_validator/views/: detector_selector.py  media_control.py  media_selector_list.py  segments_list.py  segments_timeline.py  texts.py  timeline.py  video.py
tests/movie_pipeline/title_extractor/: test_title_cleaner.py  test_title_extractor.py
tests/movie_pipeline_segments_validator/: concerns.py  test_segment_container.py
tests/movie_pipeline_segments_validator/ressources/: test_title_re_blacklist.txt
tests/movie_pipeline_segments_validator/title_extractor/: test_title_cleaner.py  test_title_extractor.py
(+147 files in other folders)
