[project]
name = "movie-pipeline-segments-validator"
version = "0.2.0"
description = "A simple GUI to validate detected segments and to generate edit decision files for movie-pipeline"
readme = "README.md"
authors = [{email = "GdPaul1234 <paul.godin1234@outlook.fr>"}]

[project.scripts]
movie_pipeline_segments_validator = "movie_pipeline_segments_validator.app:main"
movie_pipeline_segments_validator_server = "movie_pipeline_segments_validator.adapters.http.main:run_server"

[tool.poetry]
packages = [{include = "movie_pipeline_segments_validator"}]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
ffmpeg-python = "^0.2.0"
schema = "^0.7.5"
deffcode = "^0.2.5"
PySimpleGUI = "^4.60.5"
decoratoroperations = {git = "https://github.com/salesforce/decorator-operations"}
Pillow = "^10.3.0"
pydantic = {extras = ["dotenv"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
