[project]
name = "movie-pipeline-segments-validator"
version = "0.3.0"
description = "A simple GUI to validate detected segments and to generate edit decision files for movie-pipeline"
readme = "README.md"
authors = [{email = "GdPaul1234 <paul.godin1234@outlook.fr>"}]

[project.scripts]
movie_pipeline_segments_validator_server = "movie_pipeline_segments_validator.adapters.http.main:run_server"

[tool.poetry]
packages = [{include = "movie_pipeline_segments_validator"}]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.2"
ffmpeg-python = "^0.2.0"
schema = "^0.7.7"
deffcode = "^0.2.6"
pydantic = {version = "^2.11.9"}
pydantic-settings = "^2.10.1"
fastapi = {extras = ["standard"], version = "^0.116.1"}
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
