[project]
name = "movie-pipeline-segments-validator"
version = "0.3.2"
description = "A simple GUI to validate detected segments and to generate edit decision files for movie-pipeline"
readme = "README.md"
authors = [{email = "GdPaul1234 <paul.godin1234@outlook.fr>"}]

[project.scripts]
movie_pipeline_segments_validator_server = "movie_pipeline_segments_validator.adapters.http.main:run_server"

[tool.poetry]
packages = [{include = "movie_pipeline_segments_validator"}]

[tool.poetry.dependencies]
python = "^3.13"
PyYAML = "^6.0.3"
ffmpeg-python = "^0.2.0"
schema = "^0.7.8"
deffcode = "^0.2.6"
pydantic = {version = "^2.12.0"}
pydantic-settings = "^2.11.0"
fastapi = {extras = ["standard"], version = "^0.119.0"}
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
